2004-09-02  Francois Dumont  <dums@...>

	* stlport/exception, stlport/stl/_site_config.h, test/unit/exception_test.cpp:
	Creation of the _STLP_NO_UNEXPECTED_EXCEPT_SUPPORT macro to signal support of
	the unexpected exception mecanism. Related type/function are only brought to the
	STLport namespace if correctly supported, exception_test.cpp check that.
	
	* New modification of the _Rb_tree and _Hashtable associated iterator structs.
	Removal of the container_type pass through the iterator traits; iterator traits
	is the type that will make each derived container iterator type real different
	type making them uncomparable.
	
	* stlport/ctype.h: rollback of the above rollback ;-) only of course for the 
	Win CE code fix that was part of the previous commitment.
	
2004-09-01  Petr Ovtchenkov  <ptr@Island...>

	* Rollback include schema: code is broken.

2004-08-31  Francois Dumont  <dums@...>

	* _STLP_INCOMPLETE_EXCEPTION_HEADER replace by the more intuitive
	_STLP_NO_UNCAUGHT_EXCEPT_SUPPORT macro.
	
	* Modification of the include schema of all public headers in stlport folder
	that need to be reentrant. Now those files are fully guarded and the specific
	STLport code is only included once at the end of the inclusion, the reentrancy
	only concern inclusion of the native headers.

2004-08-30  Francois Dumont  <dums@...>

	* stlport/stl/_deque.c: Fix of a pseudo 'uninitialized variable used' thanks 
	Kidman.
	
2004-08-27  Francois Dumont  <dums@...>

	* .Net 2002 (VC70) portage.

2004-08-27  Petr Ovtchenkov  <ptr@Island...>

	* src/explore/Makefiles/gmake/gcc.mak, app/gcc.mak, lib/gcc.mak: buggy C++
	language support in libsupc++ in gcc before 3.3 not allow to use it;
	link with libstdc++ instead.

	* stlport/config/stl_icc.h: fix features for icc 7.1; fix features for Linux
	platforms.

2004-08-24  Francois Dumont  <dums@...>

	* stlport/config/stl_gcc.h, stl_msvc.h: fixing of configuration concerning